# SynaptiCore

./: .env.template  .gitignore  MANIFEST.in  README.md  monke-mermaid.mmd  monke-status.md  pyproject.toml  reqs_generator.py  requirements.txt  requirements_uv.txt  setup.py
Demo/: demDeCypher.py
SynaptiCore/: __init__.py
SynaptiCore/Apps/: DeCypher.py  __init__.py
SynaptiCore/Apps/RoutesHQ/intent_classifier/: __init__.py  classifier.py  classifier_langchain.py  schema.py  utils.py
SynaptiCore/Apps/RoutesHQ/notebooks/: intent_classifier_demo.ipynb  intent_classifier_graph_demo.ipynb
SynaptiCore/Core/: __init__.py  genFuncs.py  langFuncs.py
SynaptiCore/Core/a2aPro/: __init__.py  anyA2A.py
SynaptiCore/Core/a2aPro/core/: __init__.py  client.py  orchestrator.py  server.py
SynaptiCore/Core/a2aPro/utils/: __init__.py  card_resolver.py  common_types.py  remote_agent_connection.py  server_utils.py  task_manager.py
SynaptiCore/Core/mcPro/: __init__.py  anyMCP.py
SynaptiCore/Data/: __init__.py
SynaptiCore/DevX/: __init__.py  test_jupy.ipynb  test_langraph.py  test_smol.py
SynaptiCore/Servers/: __init__.py  mcpClient.py  mcpServer.py  readme.md  requirements.txt  serverDeCypher.py  serverSnowflake.py
SynaptiCore/Servers/mcPro/: mcpClient.py
SynaptiCore/Tools/: __init__.py  langBots.py  liteLM.py  settings.py  smolBots.py
monke-docs/: design-specs.md  hld.md  implementation-specs.md  open-questions.md  project-specs.md  sdlc-specs.md  status-template.md  test-specs.md
monke-docs/lld/: a2a-card-resolver.md  a2a-client.md  a2a-server.md  a2a-task-manager.md  a2a-types.md  agui-client.md  agui-server.md  agui-types.md  app-server.md  app-shell.md  calculator.md  chat-view.md  common-types.md  decypher-agent.md  decypher-app.md  host-orchestrator.md  llm-provider.md  mcp-server.md  mcp-types.md  pdf-processor.md  routeshq-app.md  snowflake-connector.md  tool-registry.md  web-search.md
monke-docs/rage-run/: template.md
monke-docs/recon/: recon-gaps.md  recon-roadmap.md  recon-survey.md
