[project]
name = "synapticore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.36.18",
    "google-generativeai==0.8.4",
    "litellm==1.59.6",
    "matplotlib==3.9.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pymupdf==1.25.3",
    "python-dotenv==1.0.1",
    "smolagents==1.9.2",
    "snowflake-connector-python==3.13.2",
    "torch==2.2.0",
    "transformers==4.48.3",
]
